# parties

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.dockerhub.md  README.md  REFACTORING.md  design.pen  docker-compose-build.yml  docker-compose.yml  vcpkg.json
.github/workflows/: ci.yml  release.yml
client/: CMakeLists.txt
client-ios/: CMakeLists.txt  vcpkg.json
client-ios/App/: AppDelegate.mm  Info.plist  PartiesViewController.h  PartiesViewController.mm  ScreenShareViewController.h  ScreenShareViewController.mm  VideoDecoderIOS.h  VideoDecoderIOS.mm  app_model.h  app_model.mm  sound_player_stub.cpp
client-ios/App/Assets/: lobby.rml  style.rcss
client-ios/Backends/: RmlUi_Backend_iOS_Metal.h  RmlUi_Backend_iOS_Metal.mm  RmlUi_Renderer_Metal.h  RmlUi_Renderer_Metal.mm  nanosvg_impl.cpp
client/include/client/: app.h  app_core.h  audio_engine.h  chat_model.h  chat_selection.h  context_menu.h  custom_elements.h  gradient_circle_element.h  level_meter_element.h  lobby_model.h  net_client.h  rml_binding.h  rml_elements.h  screen_capture.h  server_list_model.h  settings.h  slug_font_engine.h  slug_glyph_cache.h  sound_player.h  stream_audio_player.h  ui_manager.h  video_decoder.h  video_element.h  video_encoder.h  voice_mixer.h  webcam_capture.h
client/res/: Info.plist.in  Parties.entitlements  app.manifest  app.rc.in
client/src/: app.cpp  app_core.cpp  audio_engine.cpp  chat_model.cpp  chat_selection.cpp  gradient_circle_element.cpp  level_meter_element.cpp  lobby_model.cpp  main.cpp  net_client.cpp  net_client_msquic.cpp  rmlui_backend.cpp  screen_capture.cpp  server_list_model.cpp  settings.cpp  slug_font_engine.cpp  slug_glyph_cache.cpp  sound_player.cpp  stream_audio_capture.cpp  stream_audio_player.cpp  ui_manager.cpp  video_decoder.cpp  video_element.cpp  video_encoder.cpp  voice_mixer.cpp
client/src/dx12/: RmlUi_Renderer_DX12.cpp  RmlUi_Renderer_DX12.h  RmlUi_Renderer_DX12WL.cpp  RmlUi_Renderer_DX12WL.h
client/src/ios/: AppDelegate.mm  app_ios.mm
client/src/macos/: app_macos.mm  auto_updater_macos.mm  screen_capture_macos.h  screen_capture_macos.mm
client/src/nvidia/: nvdec_decoder.cpp  nvdec_decoder.h  nvenc_encoder.cpp  nvenc_encoder.h  nvidia_loader.cpp  nvidia_loader.h
client/src/vulkan/: RmlUi_Include_Vulkan.h  RmlUi_Renderer_VK.cpp  RmlUi_Renderer_VK.h
client/src/windows/: app.cpp  auto_updater.cpp  main.cpp  ui_manager.cpp  webcam_capture.cpp
client/ui/: lobby.rml  lobby.vars  style.rcss
common/: CMakeLists.txt
common/include/parties/: alloc_tracker.h  audio_common.h  bip39_wordlist.h  codec.h  crash_reporter.h  crypto.h  profiler.h  protocol.h  quic_common.h  server_query.h  types.h  video_common.h
common/src/: alloc_tracker.cpp  codec.cpp  crash_reporter.cpp  crypto.cpp  log.cpp  quic_common.cpp  server_query.cpp
designer/: CMakeLists.txt
designer/src/: designer_app.cpp  designer_app.h  embedded_fonts.cpp  file_watcher.cpp  file_watcher.h  main.cpp
designer/ui/: manager.rcss  manager.rml
docs/: analysis-backlog.md  plugins.md  protocol.md
encdec/: CMakeLists.txt
encdec/include/encdec/apple/: VideoDecoderIOS.h  video_encoder_macos.h
encdec/src/amd/: amf_decoder.cpp  amf_decoder.h  amf_encoder.cpp
encdec/src/apple/: VideoDecoderIOS.mm  video_encoder_macos.mm
encdec/src/mft/: mft_decoder.cpp  mft_decoder.h  mft_encoder.cpp  mft_encoder.h
encdec/src/nvidia/: nvdec_decoder.cpp
ports/msquic/: portfile.cmake  vcpkg.json  wolfssl_compat.h
ports/wolfssl/: portfile.cmake  vcpkg.json
sdk/: CMakeLists.txt
server/: CMakeLists.txt
server/include/server/: config.h  database.h  plugin_manager.h  quic_server.h  server.h  session.h
server/res/: server.default.toml
server/src/: config.cpp  database.cpp  main.cpp  plugin_manager.cpp  quic_server.cpp  server.cpp
tests/: CMakeLists.txt  aux_stream_test.cpp  integration_test.cpp  plugin_policy_test.cpp  voice_loss_test.cpp
tools/: screenshot.cpp
